fix: vercel config and homepage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://todos-ten-mu.vercel.app",
+  "homepage": "https://todos-c8hu605nm-drnocoders-projects.vercel.app",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
